Added NewtonsoftJson package

--- a/CitiesInfo/CitiesInfo.API/CitiesInfo.API.csproj
+++ b/CitiesInfo/CitiesInfo.API/CitiesInfo.API.csproj
@@ -8,5 +8,9 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9" />
+  </ItemGroup>
+
 
 </Project>
