--- a/CitiesInfo/CitiesInfo.API/CitiesInfo.API.csproj
+++ b/CitiesInfo/CitiesInfo.API/CitiesInfo.API.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\Contexts\Contexts.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\Profiles\Profiles.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
